services/hubble/backendtrafficpolicy.yml
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: hubble-ui
  namespace: kube-system
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: hubble-ui
  healthCheck:
    active:
      type: TCP
      tcp: {}
      interval: 10s
      timeout: 2s
      unhealthyThreshold: 3
      healthyThreshold: 1
  rateLimit:
    type: Local
    local:
      rules:
        - limit:
            requests: 50
            unit: Second
