services/hubble/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: hubble-ui
  namespace: kube-system
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: Hubble
    gethomepage.dev/description: Observabilidad de red del clúster (Cilium)
    gethomepage.dev/group: Monitorizacion
    gethomepage.dev/icon: cilium.png
    gethomepage.dev/href: https://hubble.bonchan.org
spec:
  parentRefs:
    - name: homelab
      namespace: envoy-gateway-system
  hostnames:
    - hubble.bonchan.org
  rules:
    - backendRefs:
        - name: hubble-ui
          port: 80
